syntax = "proto3";

package manager_role;

option go_package = "./v1;v1";

import "validate/validate.proto";

message Role {
  uint32 id = 1;
  uint32 parent_id = 2;
  string name = 3;
  string keyword = 4;
  bool status = 5;
  string description =6;
  string department_ids =7;
  string data_scope = 8;
  uint32 created_at = 9;
  uint32 updated_at = 10;
  repeated Role children = 11;
}

// 获取指定的角色
message GetRoleRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}

message AddRoleRequest{
  uint32 parent_id = 1[(validate.rules).uint32 = {gt:0}];
  string name = 2[(validate.rules).string = {min_len:1}];
  string keyword = 3[(validate.rules).string = {min_len:1}];
  optional bool status = 4;
  string description =5[(validate.rules).string = {min_len:1}];
  string department_ids =6;
  string data_scope = 7[(validate.rules).string = {min_len:1,in:["ALL","CUR", "CUR_DOWN", "DOWN", "CUSTOM"]}];
}

message AddRoleReply{
  uint32 id = 1;
}

message UpdateRoleRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
  uint32 parent_id = 2[(validate.rules).uint32 = {gt:0}];
  string name = 3[(validate.rules).string = {min_len:1}];
  optional bool status = 4;
  string description =5[(validate.rules).string = {min_len:1}];
  string department_ids =6;
  string data_scope = 7[(validate.rules).string = {min_len:1}];
}

message DeleteRoleRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}

message GetRoleMenuIdsRequest{
  uint32 role_id = 1[(validate.rules).uint32 = {gt:0}];
}

message GetRoleMenuIdsReply{
  repeated uint32 list =1;
}

message UpdateRoleMenuRequest{
  uint32 role_id = 1[(validate.rules).uint32 = {gt:0}];
  repeated uint32 menu_ids = 2[(validate.rules).repeated = {min_items:1}];
}